# many-body-qsim

./: .gitignore  01_tfim_exact_vs_trotter.ipynb.ipynb  README.md  pyproject.toml
examples/: fixed.py  square_tfim_magnetization_benchmark.py
notebooks/: 01_VQE_Heisenberg_Correlation_Maps.ipynb  01_tfim_exact_vs_trotter.ipynb  01_tfim_exact_vs_trotter.ipynb.ipynb  02_Exact_vs_Trotter_Ising_Evolution.ipynb
src/: circuit.py  hamiltonian.py  observables.py  plotting.py
src/many-body-qsim/: evolution.py  gates.py  observables.py
src/many_body_qsim/: algorithms.py  ansatz.py  evolution.py  hamiltonians.py  lattices.py  observables.py  plotting.py
src/many_body_qsim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_circuits.py  test_gates.py  test_hamiltonians_hermitian.py  test_statevector.py
time_simulation/: hamiltonian.py
