[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "many-body-qsim"
version = "0.1.0"
description = "A Python framework for simulating quantum many-body systems."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Brendan Stork"}
]

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
